tests/integration/snapshots/integration__conformance__n_string_accentuated_char_no_quotes.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[é]
stderr ---
error: unexpected character `é`. expected start of a json value
 --> stdin:1:2
  |
1 | [é]
  |  ^
